--- a/src/styles/CampusLast.css
+++ b/src/styles/CampusLast.css
@@ -87,14 +87,21 @@ h1{
     }
   }
 
+
+
+  /*numbers columns */
   .vertical-box-container {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     margin-bottom: 40px; /* Space between the columns and the footer */
+    /* background-color: #FCEFF8; */
+    padding:20px;
+    margin-left:300px;
+
   }
   
   .vertical-box {
@@ -104,28 +111,50 @@ h1{
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-color: #f5f5f5;
-    max-height: 300px; /* Set a max height for each box */
-    overflow: hidden; /* Prevent overflow of text */
+    justify-content: flex-start; /* Align content to the start */
+    height: 500px; /* Set a max height for each box */
   }
   
-  .box-number {
-    font-size: 5rem;
-    color: #333;
-    margin-bottom: 20px;
+  .vertical-box-number {
+    font-size: 6rem;
+    color: black;
+    margin: 10px; /* Small space below the number */
+    text-align: left;
+    font-weight: 600;
+    height:120px;
   }
   
-  p {
-    font-size: 1.2rem;
-    color: #555;
+  .vertical-box-heading {
+    font-size: 1.1rem; /* Font size for the heading */
+    color: black;
+    text-align: left;
+   
+  }
+  
+  .vertical-para {
+    padding:0;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: 500;
+    text-align: left;
   }
   
   /* Separator between the columns */
-  .separator {
-    width: 2px;
-    background-color: #000;
-  }
+.vertical-box-separator {
+  width: 2px;
+  background-color: #000;
+  height:100px;
+}
+
+/* Add a border around the vertical boxes */
+.vertical-box {
+  border-right: 2px solid #000; /* Add a right border to each box */
+}
+
+/* Remove right border from the last box */
+.vertical-box:last-child {
+  border-right: none;
+}
   
   /* Responsive Design */
   @media (max-width: 768px) {
@@ -145,4 +174,5 @@ h1{
     }
   }
   
+ 
   
